--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Ibrahim Opeyemi" width="80">
         </figure>
 
         <div class="info-content">
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Nigeria, Lagos, Nigeria</Lagos>
+              <address>West Africa,Cape, West Africa</Cape>
             </div>
 
           </li>
@@ -209,8 +209,8 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
+            I'm Creative Director and UI/UX Designer from Cape, West Africa, working in web development and print media.
+            I enjoyfr
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
 
@@ -325,7 +325,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -347,7 +347,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -369,7 +369,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -391,7 +391,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -437,7 +437,7 @@
 
               <div data-modal-text>
                 <p>
-                  Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                  Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
                   lot of experience
                   and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                   consectetur adipiscing
@@ -534,11 +534,10 @@
 
               <h4 class="h4 timeline-item-title">University school of the arts</h4>
 
-              <span>2007 — 2008</span>
+              <span>2010 — 2014</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
+               No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.
                 exceptur.
               </p>
 
@@ -546,13 +545,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Cape academy of art</h4>
 
-              <span>2006 — 2007</span>
+              <span>2015 — 2016</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                University dedicated to nurturing creative talent and fostering artistic expertise across various disciplines.
               </p>
 
             </li>
@@ -561,12 +559,10 @@
 
               <h4 class="h4 timeline-item-title">High school of art and design</h4>
 
-              <span>2002 — 2004</span>
+              <span>2018 — 2020</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+               Art-focused high school cultivating creativity and artistic skills in students.
               </p>
 
             </li>
@@ -594,9 +590,8 @@
               <span>2015 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                I enthusiastically undertook the role of Creative Director, leading cross-functional teams to ideate and execute innovative campaigns.
+                This experience allowed me to cultivate my leadership skills while driving the artistic direction of projects that resonated with audiences."
               </p>
 
             </li>
@@ -608,9 +603,9 @@
               <span>2013 — 2015</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+               As an Art Director, I embraced the opportunity to curate and shape visual concepts into impactful realities.
+                This experience allowed me to refine my artistic sensibilities while delivering engaging visual solutions that exceeded expectations. 
+                
               </p>
 
             </li>
@@ -622,9 +617,8 @@
               <span>2010 — 2013</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Embracing the role of a web designer, I immersed myself in crafting digital experiences that seamlessly merged aesthetics with functionality.
+                This journey honed my skills in responsive design, UI/UX principles, and effective communication, resulting in websites that not only looked captivating but also provided intuitive user interactions."
               </p>
 
             </li>
@@ -682,11 +676,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <data value="65">65%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <div class="skill-progress-fill" style="width: 65%;"></div>
               </div>
 
             </li>
