--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/WQBV5149%5B1%5D.JPG" alt="Ibrahim Opeyemi" width="80">
+          <img src="./assets/images/WQBV5149%5B1%5D.JPG" alt="Ibrahim Opeyemi" width="80">
         </figure>
 
         <div class="info-content">
