--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/OceanAir - Things to do and holidays in Dubai.png.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/OceanAir - Things to do and holidays in Dubai.png" alt="dsm." loading="lazy">
                 </figure>
 
                 <h3 class="project-title">DSM.</h3>
