--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <section class="about-text">
           <p>
             I'm Creative Director and UI/UX Designer from Cape, West Africa, working in web development and print media.
-            I enjoyfr
+            I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
 
