--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="#" class="https://www.linkedin.com/in/ibrahim-opeyemi-281a73277?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
