--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="#" class="https://www.facebook.com/mustapha.opeyemi.549436
+">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
@@ -140,7 +141,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="https://www.linkedin.com/in/ibrahim-opeyemi-281a73277?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+            <a href="#" class="	https://www.linkedin.com/in/ibrahim-opeyemi-281a73277?
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
