--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="https://www.facebook.com/mustapha.opeyemi.549436
+            <a href="#" class="https://www.facebook.com/mustapha.opeyemi
 ">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
@@ -141,7 +141,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="	https://www.linkedin.com/in/ibrahim-opeyemi-281a73277?
+            <a href="#" class="	https://www.linkedin.com/in/ibrahim-opeyemi
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
