--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
 
           <li class="social-item">
             <a href="#" class="https://www.facebook.com/mustapha.opeyemi.549436">
-">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
@@ -141,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="https://www.linkedin.com/in/ibrahim-opeyemi-281a73277/">
+            <a href="#" class="www.linkedin.com/in/ibrahim-opeyemi-281a73277/">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
