--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="https://www.facebook.com/mustapha.opeyemi.549436">
+            <a href="#" class="www.facebook.com/mustapha.opeyemi.549436/">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
