--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.facebook.com/mustapha.opeyemi.549436">
+            <a href="https://www.facebook.com/">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
@@ -140,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a href="www.linkedin.com/in/ibrahim-opeyemi-281a73277/">
+            <a href="www.linkedin.com/">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
