--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a href="www.linkedin.com/">
+            <a href="https://www.linkedin.com/">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
