--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://twitter.com/">
+            <a href="https://www.twitter.com/">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
