--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="horpeyemiib@gmail.com" class="contact-link">horpeyemiib@gmail.com</a>
+              <a href="mailto:horpeyemiib@gmail.com">horpeyemiib@gmail.com</a>
             </div>
 
           </li>
