--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:horpeyemiib@gmail.com">horpeyemiib@gmail.com</a>
+             <p><a href="mailto:horpeyemiib@gmail.com">horpeyemiib@gmail.com</a></p>
             </div>
 
           </li>
