--- a/index.html
+++ b/index.html
@@ -144,7 +144,12 @@
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
-
+          
+          <li class="social-item">
+            <a href="https://www.upwork.com/">
+              <ion-icon name="logo-upwork"></ion-icon>
+            </a>
+          </li>
         </ul>
 
       </div>
