--- a/index.html
+++ b/index.html
@@ -292,14 +292,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-photo.svg" alt="bubble.io" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Fullstack</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  I make high-quality both backend and frontend with bubble.io of any category at a professional level.
                 </p>
               </div>
 
@@ -331,11 +331,9 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. he have a
                     lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    and is very concerned about the needs of client. Ibrahim was very easy to work with and attentive to my needs. His input was valuable and reflected his experience with web design.
                   </p>
                 </div>
 
@@ -353,11 +351,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                  "Ibrahim gave me exactly what I was looking for , followed the requirements perfectly with a speedy turnaround. You are extremely professional and polite. I wish I met you earlier and I'm definitely coming back for more project."
                   </p>
                 </div>
 
@@ -375,11 +369,8 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                  "when it comes to collaboration and effective team work, Ibrahim us the Go-to Guy, i will recommend him again and again, He came up with a design that speaks of my companie's objective and vision, and also came up with a layout and a perfect design. IBRAHIM is the best
+Thanks for Fixing the bugs"
                   </p>
                 </div>
 
@@ -397,11 +388,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Ibrahim was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Ibrahim is a very understanding Expert, even though we are not from the same country, yet his communication skill is awesome, he gives me update very often, he always understand my needs and see my vision as his, Ibrahim is very flexible with the time too! I'm very grateful to get a chance to work with him, its only phase 1 though, but Ibrahim already shown his creativity, with this kind of work, my apps will definitely breakthrough! Thanks Ibrahim"
                   </p>
                 </div>
 
