--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                   <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Amanda brown</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
