--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+2349162310110" class="contact-link">+2349162310110</a>
+              <a href="tel:+234 916 231 0110">+234 916 231 0110</a>
             </div>
 
           </li>
